# SeedreamCli

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  publish.yml  sync-from-docs.yml
deploy/production/: deployment.yaml  service.yaml
seedream_cli/: __init__.py  __main__.py  main.py
seedream_cli/commands/: __init__.py  image.py  info.py  task.py
seedream_cli/core/: __init__.py  client.py  config.py  exceptions.py  output.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_integration.py  test_output.py
